# colorlight-riscv-rs

./: readme.md  soc.py
app/: Cargo.toml  readme.md
app/src/: main.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config  flash.sh  sim.sh
firmware/src/: main.rs
litex-pac/: 5a-75e_6.0.svd  Cargo.toml  build.rs  memory.x
litex-pac/src/: lib.rs
soc/: readme.md  soc.py
