[package]
name = "litex-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
critical-section = { version = "1.0", optional = true }
riscv = "0.11.0"
riscv-rt = { version = "0.12.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.33.0"
form = "0.11.1"